--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,8 @@
         text allign:left;
       }
     </style>
-    <h1>Foundation Training Batch 4</h1>
+    <h1>Foundation Training</h1>
+	<h3>Training session by Shalini mam</h3>
     <marquee><i><p>Mavericks training</p></i></marquee>
 
     <img src="batch4.jpg" height="200px" width="400px">
